# fishmind

./: .cursorrules  .gitignore  README.md  package.json  pnpm-lock.yaml  start-dev.bat  tsconfig.json  tsconfig.test.json  vite.config.ts
docs/: layout_design.md  product_description.md  technical_documentation.md  todo.md
docs/dev_logs/: 1.2.md  1.4.md  MCP工具与大模型集成需求分析.md  chatContainer.md  config_repository_refactoring.md  config_service.md  event_upgrade.md  mcp3.md  mcp4.md  mcp_phase1_plan.md  mcp_settings_development.md  mcp_集成计划.md  mcp流程分析1.md  mcp流程分析2.md  message_mapping_fix.md  model_repository_not_null_fix.md  为什么要使用上下文管理mcp.md  新建mcptoolservice优劣势分析.md
docs/feature/: architecture-guide.md  chat_history_management.md  chat_service_refactoring-plan.md  config-and-storage-design.md  database-service-refactoring-plan.md  mcp_extension_roadmap.md  mcp_front_plan.md  mcp_support.md  mcp需求分析.md  phase1-implementation-plan.md  phase2-implementation-plan.md  phase3-implementation-plan.md  storage-design.md  助手与话题2.md  助手和话题.md  助手和话题2.md  重构service.md
docs/mcp_docs/: schema.ts
docs/technicals/: config_repository_design.md  tauri插件使用.md  数据库和服务层架构指南.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: encryption.rs  main.rs
src-tauri/src/mcp/: client.rs  client_test.rs  commands.rs  commands_test.rs  integration_test.rs  mod.rs  types.rs
src/components/: SQLiteServiceTest.tsx
src/config/: models.ts  providers.ts
src/contexts/: McpToolContext.tsx  (+1 more)
(+140 files in other folders)
