[package]
name = "fishmind"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fishmind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ring = "0.17.11"
base64 = "0.22.1"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tokio = { version = "1.28", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
mcp-client-fishcode2025 = "0.1.0"
mcp-core-fishcode2025 = "0.1.0"
mcp-server-fishcode2025 = "0.1.0"
mcp-macros-fishcode2025 = "0.1.0"
enum_dispatch = "0.3.13"
tauri-plugin-dialog = "2"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
mockall = "0.12.1"
tokio-test = "0.4.3"
